# Vector_Databases

./: README.md  embeddings.db  main.py  pyproject.toml
FAISS_example/: facebook_ai_similarity_search.py
chroma_db_example/: chromadb-book_collections.py  chromadb_multiple_documents.py
pinecone_example/: news.txt  pinecone_indexing.py  semantic_search.py  sentence_embeddings.py
qdrant_example/: books.txt  delete_favorite_books_collection.py  qdrant.py
